--- a/Results.html
+++ b/Results.html
@@ -16,7 +16,7 @@ Results | GSSSBangana
 <body>
 
 <div class="navbar">
-  <a  href="home.html">Home</a>
+  <a  href="https://gsssbangana.github.io/">Home</a>
   
   <div class="dropdown">
     <button style="background-color:red;" class="dropbtn"> Academics 
