--- a/Teacher Achievers.html
+++ b/Teacher Achievers.html
@@ -15,7 +15,7 @@ Home | GSSSBangana
 <body>
 
 <div class="navbar">
-  <a href="home.html">Home</a>
+  <a href="https://gsssbangana.github.io/">Home</a>
   
   <div class="dropdown">
     <button style="background-color:red;" class="dropbtn">Academics 
