--- a/Academic Records.html
+++ b/Academic Records.html
@@ -23,7 +23,7 @@ Home | GSSSBangana
     </button>
     <div class="dropdown-content">
       <a href="Results.html">Results</a>
-   <a  href="#">Student Achievers</a>
+   <a  href="Student Achievers.html">Student Achievers</a>
       <a  href="Teacher Achievers.html">Teacher Achievers</a>
 <a class="active" href="Academic Records.html">Academic Records</a>
    </div></div>
