--- a/Student Achievers.html
+++ b/Student Achievers.html
@@ -24,7 +24,7 @@ Results | GSSSBangana
     </button>
     <div class="dropdown-content">
       <a  href="Results.html">Results</a>
-      <a class="active" href="#">Student Achievers</a>
+      <a class="active" href="Student Achievers.html">Student Achievers</a>
       <a href="Teacher Achievers.html">Teacher Achievers</a>
 <a href="Academic Records.html">Academic Records</a>
    </div></div>
