--- a/Students_Section/Resources(Study Material).html
+++ b/Students_Section/Resources(Study Material).html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacts | GSSSBangana</title>
+    <title>Resources (Study Material) | GSSSBangana</title>
     <link href="main.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
