--- a/Activities/Get_Homework.html
+++ b/Activities/Get_Homework.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sports_Corner | GSSSBangana</title>
+    <title>Homework | GSSSBangana</title>
     <link href="main.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
@@ -73,7 +73,6 @@
                 </div>
             </div>
         </li>
-
         <li>
             <a class="top-heading"> Activities</a>
             <i class="caret"></i>
@@ -81,7 +80,7 @@
                 <div class="dd-inner">
                 
                     <ul class="column">
-      <li><h3>Gallery, Holidays And Others</h3></li>
+     <li><h3>Gallery, Holidays And Others</h3></li>
                         <li><a href="https://gsssbangana.github.io/Activities/Gallery"> Gallery</a></li>
                         <li><a href="https://gsssbangana.github.io/Activities/Vacation_Schedule">Holidays And Vacation Schedule</a></li>
                         <li><a href="https://gsssbangana.github.io/Activities/Get_Homework">Homework</a></li>
