--- a/Administration.html
+++ b/Administration.html
@@ -100,3 +100,132 @@
 </nav>
 
 <br>
+<h1> Staff Details </h1>
+<hr>
+
+<h2> Principal </h2>
+<table>
+<thead>
+<th colspan="1"> Photo</th>
+<th colspan="1"> Name</th>
+<th colspan="1"> Designation</th>
+<th colspan="1"> Date of Joining School</th>
+<th colspan="1"> Last Updated</th>
+</thead>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Surjeet Singh
+</td>
+<td>
+Principal
+</td>
+<td>
+</td>
+</tr>
+</table>
+
+
+
+<br>
+
+<h2> Post Graduate Teacher </h2>
+<table>
+<thead>
+<th colspan="1"> Photo</th>
+<th colspan="1"> Name</th>
+<th colspan="1"> Designation</th>
+<th colspan="1"> Date of Joining School</th>
+<th colspan="1"> Last Updated</th>
+</thead>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Abcd
+</td>
+<td>
+PGT (Accounts)
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Abcd
+</td>
+<td>
+PGT (Business Studies)
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Sh. Abcd
+</td>
+<td>
+PGT (Chemistry)
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Abcd
+</td>
+<td>
+PGT (Economics)
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Abcd
+</td>
+<td>
+PGT (English)
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Abcd
+</td>
+<td>
+PGT (Economics)
+</td>
+<td>
+</td>
+<td>
+</td>
+</tr>
+</table>
