--- a/Students_Section/Resources(Study Material).html
+++ b/Students_Section/Resources(Study Material).html
@@ -11,6 +11,7 @@
 <meta property="og:image" content="https://i.imgur.com/DG2HG8s.png">
 <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png"/>
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
+
 </head>
 <body>
 <nav id="ddmenu">
@@ -99,4 +100,1326 @@
 </nav>
 
 <br>
+<h1> <font color="red"><i>Get the study material and other resources </i> </h1>
+<h2 id="section-0"></h2>
+<h3> What this page contains: </h3>
+<p>
+<a href="#section-1"> Get 6th Standard books </a>
+</p>
+<p>
+<a href="#section-2"> Get 7th Standard books </a>
+</p>
+<p>
+<a href="#section-3"> Get 8th Standard books </a>
+</p>
+<p>
+<a href="#section-4"> Get 9th Standard books </a>
+</p>
+<p>
+<a href="#section-5"> Get 10th Standard books </a>
+</p>
+<p>
+<a href="#section-6"> Get 11th Standard books </a>
+</p>
+<p>
+<a href="#section-7"> Get 12th Standard books </a>
+</p>
+<p>
+<a href="#section-8"> Get books for competitive exams </a>
+</p>
+<div style="margin:50px auto 40px; width:device-width; font-family: EB Garamond 12 Regular; color:white; background-color:peach; padding:30px; border-radius:20px; border: 5px solid grey;">
+<h2 id="section-1"></h2>
+<h2> <font color="green"> From standard 6th to 8th </h2>
+
+<div id="container"><div>
+
+<table>
+<thead>
+<tr><th colspan="2"> Standard 6th Computer</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 6th English</th></tr> 
+
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 6th Hindi</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 6th Mathematics</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 6th Sanskrit</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 6th Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 6th Social Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+</table>
+<p>
+<a href="#section-0"><h2>Back to top</h2></a>
+</p>
+</div>
+</div>
+<hr>
+<br>
+
+<hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<h2 id="section-2"></h2>
+<div id="container">
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 7th Computer</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 7th English</th></tr> 
+
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 7th Hindi</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 7th Mathematics</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 7th Sanskrit</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 7th Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 7th Social Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+<p>
+<a href="#section-0"><h2>Back to top</h2></a>
+</p>
+</div>
+</div>
+<hr>
+<br>
+
+<hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<h2 id="section-3"></h2>
+<div id="container">
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 8th Computer</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 8th English</th></tr> 
+
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 8th Hindi</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 8th Mathematics</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 8th Sanskrit</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 8th Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 8th Social Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+<p>
+<a href="#section-0"><h2>Back to top</h2></a>
+</p>
+</div>
+</div>
+
+ 
+  
+
+
+
+
+</div>
+<div style="margin:50px auto 40px; width:device-width; font-family: EB Garamond 12 Regular; color:white; background-color:peach; padding:30px; border-radius:20px; border: 5px solid grey;">
+<h2> <font color="green"> For Standard 9th and 10th </h2>
+<div id="container"><div>
+<h3> Get the textbooks and study material for different competitive exams! </h3>
+<h2 id="section-4"></h2>
+<div id="container">
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 9th Computer</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 9th English</th></tr> 
+
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 9th Hindi</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 9th Mathematics</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 9th Sanskrit</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 9th Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 9th Social Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book (Geography)</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book (Geography)</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  </tr>
+</thead> 
+
+
+
+ 
+<tr> <td>NCERT Book (History)</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book (History)</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+
+  </tr>
+</thead> 
+<tr> <td>NCERT Book (Civics)</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book (Civics)</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+<p>
+<a href="#section-0"><h2>Back to top</h2></a>
+</p>
+</div>
+</div>
+<hr>
+<br>
+<hr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<h2 id="section-5"></h2>
+<div id="container">
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 10th Computer</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 10th English</th></tr> 
+
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 10th Hindi</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 10th Mathematics</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 10th Sanskrit</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 10th Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+</div>
+
+
+
+
+<div>
+<table>
+<thead>
+<tr><th colspan="2"> Standard 10th Social Science</th></tr> 
+ 
+  </tr>
+</thead> 
+<tr> <td>NCERT Book (Geography)</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book (Geography)</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+  </tr>
+</thead> 
+
+
+
+ 
+<tr> <td>NCERT Book (History)</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book (History)</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+
+  </tr>
+</thead> 
+<tr> <td>NCERT Book (Civics)</td>
+    <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+
+<tr>
+
+    <td>ICSE Book (Civics)</td>
+    <td><a href=""><button >Download</button></a></td>
+
+</tr>
+
+
+  
+  
+ <tr> <td>Reference Book</td>
+  <td><a href=""><button >Download</button></a></td>
+ 
+</tr>
+</table>
+<p>
+<a href="#section-0"><h2>Back to top</h2></a>
+</p>
+</div>
+</div>
+
 
