--- a/Contacts.html
+++ b/Contacts.html
@@ -11,6 +11,19 @@
 <meta property="og:image" content="https://i.imgur.com/DG2HG8s.png">
 <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png"/>
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
+<style>
+hr { 
+  display: block;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: auto;
+  margin-right: auto;
+  border-style: inset;
+  max-width:65%;
+border-top: 1px dashed grey;
+margin-left:  15px;
+} 
+</style>
 </head>
 <body>
 <nav id="ddmenu">
@@ -88,6 +101,9 @@
  <li class="no-sub">
             <a class="top-heading" href="https://gsssbangana.github.io/Administration">Administration</a>
         </li>
+<li class="no-sub">
+            <a class="top-heading" href="https://gsssbangana.github.io/About_Us">About Us</a>
+ </li>
  <li class="no-sub">
             <a class="top-heading" href="https://gsssbangana.github.io/Contacts">Contact Us</a>
         </li>
@@ -97,6 +113,37 @@
         </li>
     </ul>
 </nav>
-
 <br>
 
+
+
+
+<header> </header>
+<h1> Contact Us </h1>
+<br>
+<h3> Postal Address</h3>
+<p>GSSS, Bangana - Dhaneta Rd,</p>
+<p>Bangana, Una, Himachal Pradesh - Pin No. 174307</p>
+<hr>
+<h3>Block:-</h3>
+<p>Bangana </p>
+
+<h3> Legislative Constituency :- </h3>
+<p> Kutlehar </p>
+
+<h3>Parliamentary Constituency :- </h3>
+<p> Hamirpur </p>
+<hr>
+<h3> 📞 Phone No. </h3>
+<p>76890xxxxx </p>
+<h3> 📧 Email </h3>
+<p>abcedef@gmail.com </p>
+<hr>
+<h3> Location:-</h3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2140.0904126441606!2d76.3464936739279!3d31.628883355705987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x391b29e8a9d53905%3A0x5a09016f8c0150c2!2sGovernment%20Senior%20Secondary%20School!5e0!3m2!1sen!2sin!4v1698417746425!5m2!1sen!2sin" width="800" height="600" style="border:2px solid black;" allowfullscreen="" loading="fast" referrerpolicy="no-referrer-when-downgrade" ></iframe>
+<hr>
+<br>
+<footer> 
+<p align="center">School comes under the HPBOSE (Himachal Pradesh Board Of Secondary Education)</p>
+<p align="center">The guidelines are issued by the state Govt. </p>
+<p align="center"> You can know more about the board on <a href="https://hpbose.org">hpbose.org</a> </p></footer>
