--- a/Students_Section/Literature(a-z).html
+++ b/Students_Section/Literature(a-z).html
@@ -88,6 +88,9 @@
  <li class="no-sub">
             <a class="top-heading" href="https://gsssbangana.github.io/Administration">Administration</a>
         </li>
+<li class="no-sub">
+            <a class="top-heading" href="https://gsssbangana.github.io/About_Us">About Us</a>
+ </li>
  <li class="no-sub">
             <a class="top-heading" href="https://gsssbangana.github.io/Contacts">Contact Us</a>
         </li>
