--- a/About_Us.html
+++ b/About_Us.html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -105,3 +106,7 @@
 <h2>About Us:-</h2> 
 <div id="better">
 <p>GSSS BANGANA was established in 1962 and it is managed by the Department of Education. It is located in Rural area. It is located in BANGANA block of UNA district of Himachal Pradesh. The school consists of Grades from 1 to 12. The school has an attached primary section. The school is Not Applicable in nature and is not using school building as a shift-school. Hindi is the medium of instructions in this school. This school is approachable by all weather road. </p>
+</cure>
+</div>
+
+
