--- a/Administration.html
+++ b/Administration.html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -176,7 +177,7 @@ PGT (Business Studies)
 <img src="images/woman.png" width="50px">
 </td>
 <td>
-Sh. Abcd
+Smt. Abcd
 </td>
 <td>
 PGT (Chemistry)
@@ -232,3 +233,4 @@ PGT (Economics)
 </td>
 </tr>
 </table>
+</cure>
