--- a/Students_Section/Resources(Study Material).html
+++ b/Students_Section/Resources(Study Material).html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -1424,5 +1425,5 @@
 </p>
 </div>
 </div>
-
+</cure>
 
