--- a/Administration.html
+++ b/Administration.html
@@ -11,6 +11,14 @@
 <meta property="og:image" content="https://i.imgur.com/DG2HG8s.png">
 <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png"/>
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
+<style>
+kr { 
+  display: block;
+ 
+border-top: 1px dashed grey;
+
+} 
+</style>
 </head>
 <body>
 <cure>
@@ -110,6 +118,7 @@
 <h2> Principal </h2>
 <table>
 <thead>
+
 <th colspan="1"> Photo</th>
 <th colspan="1"> Name</th>
 <th colspan="1"> Designation</th>
@@ -117,6 +126,7 @@
 <th colspan="1"> Last Updated</th>
 </thead>
 <tr>
+
 <td>
 <img src="images/man.png" width="50px">
 </td>
@@ -127,21 +137,26 @@ Sh. Surjeet Singh
 Principal
 </td>
 <td>
+
+</td>
+<td>
+5/11/2023
 </td>
 </tr>
 </table>
 
 
-
+<kr>
 <br>
 
 <h2> Post Graduate Teacher </h2>
 <table>
 <thead>
+
 <th colspan="1"> Photo</th>
 <th colspan="1"> Name</th>
 <th colspan="1"> Designation</th>
-<th colspan="1"> Date of Joining School</th>
+
 <th colspan="1"> Last Updated</th>
 </thead>
 <tr>
@@ -149,14 +164,13 @@ Principal
 <img src="images/man.png" width="50px">
 </td>
 <td>
-Sh. Abcd
+Sh. 
 </td>
 <td>
 PGT (Accounts)
 </td>
 <td>
-</td>
-<td>
+5/11/2023
 </td>
 </tr>
 <tr>
@@ -164,12 +178,27 @@ PGT (Accounts)
 <img src="images/man.png" width="50px">
 </td>
 <td>
-Sh. Abcd
+Sh. Vivek Sharma
+</td>
+<td>
+PGT (Biology)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. 
 </td>
 <td>
 PGT (Business Studies)
 </td>
 <td>
+5/11/2023
 </td>
 </tr>
 <tr>
@@ -177,14 +206,13 @@ PGT (Business Studies)
 <img src="images/woman.png" width="50px">
 </td>
 <td>
-Smt. Abcd
+Smt. Dimple Kumari
 </td>
 <td>
 PGT (Chemistry)
 </td>
 <td>
-</td>
-<td>
+5/11/2023
 </td>
 </tr>
 <tr>
@@ -192,14 +220,55 @@ PGT (Chemistry)
 <img src="images/man.png" width="50px">
 </td>
 <td>
-Sh. Abcd
+Sh. Manoj Kumar 
+</td>
+<td>
+PGT (Computer Science)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Subhash Chand
+</td>
+<td>
+PGT (Computer Science)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Bhupender Singh
+</td>
+<td>
+DPE
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Ranjit Singh
 </td>
 <td>
 PGT (Economics)
 </td>
 <td>
-</td>
-<td>
+5/11/2023
 </td>
 </tr>
 <tr>
@@ -207,14 +276,13 @@ PGT (Economics)
 <img src="images/man.png" width="50px">
 </td>
 <td>
-Sh. Abcd
+Sh. 
 </td>
 <td>
 PGT (English)
 </td>
 <td>
-</td>
-<td>
+5/11/2023
 </td>
 </tr>
 <tr>
@@ -222,15 +290,232 @@ PGT (English)
 <img src="images/man.png" width="50px">
 </td>
 <td>
-Sh. Abcd
+Sh. Ranjit Singh
 </td>
 <td>
 PGT (Economics)
 </td>
 <td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
 </td>
 <td>
+Smt. Saloehana Devi
+</td>
+<td>
+PGT (Hindi)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Suresh Mandyal
+</td>
+<td>
+PGT (History)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Sunil Sharma
+</td>
+<td>
+PGT (Maths)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Ram Murti Sharma
+</td>
+<td>
+PGT (Physics)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Baldev Singh Kalsi
+</td>
+<td>
+PGT (Pol. Science)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Smt. Meenakshi Soni
+</td>
+<td>
+PGT (Vocational Tourism)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Smt. Sonia Kashiv
+</td>
+<td>
+PGT (Vocational ITES)
+</td>
+<td>
+5/11/2023
 </td>
 </tr>
 </table>
+<kr>
+<br>
+
+
+
+
+
+<h2> Trained Graduate Teacher </h2>
+<table>
+<thead>
+<th colspan="1"> Photo</th>
+<th colspan="1"> Name</th>
+<th colspan="1"> Designation</th>
+<th colspan="1"> Last Updated</th>
+</thead>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Smt. Revti Raman
+</td>
+<td>
+TGT (Maths)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Smt. Indu Bala
+</td>
+<td>
+TGT (Science)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Smt. Anu Bala
+</td>
+<td>
+TGT (Hindi)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Smt. Jeevan Asha
+</td>
+<td>
+TGT (Sanskrit)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Smt. Champa Devi
+</td>
+<td>
+TGT (Arts)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/woman.png" width="50px">
+</td>
+<td>
+Smt. Reeta Devi
+</td>
+<td>
+TGT (Arts)
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+<tr>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. Raj Kumar
+</td>
+<td>
+Physical Education Teacher
+</td>
+<td>
+5/11/2023
+</td>
+</tr>
+</table>
+<kr>
+<br>
 </cure>
+<footer>
+<p align="center"> The website is managed by a student. </p>
+<p align="center"> Know more <a href="https://divyanshushares.github.io">here</a>. </p>
+</footer>
