--- a/Features/Syllabus.html
+++ b/Features/Syllabus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Public Holidays | GSSSBangana</title>
+    <title>Syllabus | GSSSBangana</title>
     <link href="main.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -101,3 +102,90 @@
 </nav>
 
 <br>
+<header> <h2 align="center">Syllabus is planned by state board i.e. HPBOSE </h2> </header>
+<h1> Syllabus:- </h1>
+<br>
+<div id="container">
+<div>
+<table>
+<thead>
+<th colspan="1"><h2> Standard 6th Syllabus:- </h2></th>
+</thead>
+<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
+</tr> </td>
+</table></div>
+<div>
+<table>
+<thead>
+<th colspan="1"><h2> Standard 7th Syllabus:- </h2></th>
+</thead>
+<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
+</tr> </td>
+</table>
+</div>
+<div>
+<table>
+<thead>
+<th colspan="1"><h2> Standard 8th Syllabus:- </h2></th>
+</thead>
+<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
+</tr> </td>
+</table>
+</div>
+<div>
+<table>
+<thead>
+<th colspan="1"><h2> Standard 9th Syllabus:- </h2></th>
+</thead>
+<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
+</tr> </td>
+</table>
+</div>
+<div>
+<table>
+<thead>
+<th colspan="1"><h2> Standard 10th Syllabus:- </h2></th>
+</thead>
+<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
+</tr> </td>
+</table>
+</div>
+<div>
+<table>
+<thead>
+<th colspan="1"><h2> Standard 11th Syllabus:- </h2></th>
+</thead>
+<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
+</tr> </td>
+</table>
+</div>
+<div>
+<table>
+<thead>
+<th colspan="1"><h2> Standard 12th Syllabus:- </h2></th>
+</thead>
+<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
+</tr> </td>
+</table>
+</div>
+</div>
+<br>
+<hr>
+<beauty> <h2 align="center"> Syllabus For Other Competitive Exams </h2>
+<ol>
+<p>
+<li>
+<h3> National Eligibility Cum Entrance Test (NEET) </h3></li> <a href=""> Get the syllabus</a></p>
+<p>
+<li>
+<h3> Joint Entrance Examination  (JEE) </h3></li> <a href=""> Get the syllabus</a></p>
+</ol>
+</beauty>
+</cure>
+
+
+
+<br>
+<footer>
+<p align="center"> This website is managed by a strudent. <a href="https://divyanshushares.github.io">Click here</a> to know more. </a>
+
