--- a/Features/Syllabus.html
+++ b/Features/Syllabus.html
@@ -67,7 +67,7 @@
                         <li><a href="https://gsssbangana.github.io/Features/Syllabus">Syllabus</a></li>
                         <li><a href="https://gsssbangana.github.io/Features/Infrastructure">Infrastructure</a></li>
                         <li><a href="https://gsssbangana.github.io/Features/Houses">Houses</a></li>
-                   
+                    <li><a href="https://gsssbangana.github.io/Features/Clubs">Clubs</a></li>
                     </ul>
                    
                 </div>
@@ -187,5 +187,5 @@
 
 <br>
 <footer>
-<p align="center"> This website is managed by a strudent. <a href="https://divyanshushares.github.io">Click here</a> to know more. </a>
+<p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more. </a>
 
