--- a/Features/Infrastructure.html
+++ b/Features/Infrastructure.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Public Holidays | GSSSBangana</title>
+    <title>Infrastructure | GSSSBangana</title>
     <link href="main.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -66,7 +67,7 @@
                         <li><a href="https://gsssbangana.github.io/Features/Syllabus">Syllabus</a></li>
                         <li><a href="https://gsssbangana.github.io/Features/Infrastructure">Infrastructure</a></li>
                         <li><a href="https://gsssbangana.github.io/Features/Houses">Houses</a></li>
-                   
+                   <li><a href="https://gsssbangana.github.io/Features/Clubs">Clubs</a></li>
                     </ul>
                    
                 </div>
@@ -101,3 +102,6 @@
 </nav>
 
 <br>
+
+<header> <h2 align="center"> School Infrastructure And Other Arrangements <h2> </header>
+<h1> Infrastructure:- </h1>
