--- a/Features/Infrastructure.html
+++ b/Features/Infrastructure.html
@@ -105,3 +105,99 @@
 
 <header> <h2 align="center"> School Infrastructure And Other Arrangements <h2> </header>
 <h1> Infrastructure:- </h1>
+
+<br>
+<kr>
+<h2> About Campus </h2>
+<p> School is located in the Kutlehar legislative constitutency. It is in the Main Bazaar of Bangana.</p>
+<p> Below is the photo of main building </p>
+<div id="object1">
+<img src="images/School01.png">
+
+</div>
+
+<br>
+<kr>
+ <h2> Buildings:- </h2>
+<p> <strong>
+School Building Type-</strong>
+Government Building</p>
+<p> <strong>
+Location-</strong>
+Rural</p>
+<p><strong> Arts Block -</strong>
+Present </p>
+<p><strong> Science Block -</strong>
+Present </p>
+<p><strong> Library -</strong>
+Present </p>
+<p><strong> Mid-Day Meal Facility -</strong>
+Present </p>
+
+
+<br>
+<kr>
+<h2> Classrooms:- </h2>
+<p> <strong>
+No. Of Classrooms -</strong>
+__</p>
+<p> <strong>
+Medium of learning-</strong>
+Hindi</p>
+
+
+
+<br>
+<kr>
+<h2> Technology:- </h2>
+<p> <strong>
+IT lab-</strong>
+Present</p>
+<p> <strong>
+CS lab-</strong>
+Present</p>
+<p> <strong>
+No. of computers in CS lab-</strong>
+___</p>
+<p> <strong>
+Computer-aided learning-</strong>
+Absent</p>
+
+
+
+<br>
+<kr>
+<h2> Sports:- </h2>
+<p> <strong>
+Playground -</strong>
+Present</p>
+<p> <strong>
+Indoor games facility -</strong>
+Absent</p>
+<p> <strong>
+Gymnasiusm -</strong>
+Absent</p>
+
+<br>
+<kr>
+<h2> Accessibility:- </h2>
+<p> <strong>
+Ramps -</strong>
+Absent </p>
+<p> <strong>
+Accommodation for disabled -</strong>
+Absent</p>
+
+<br>
+<kr>
+<h2> Parking:- </h2>
+<p> <strong>
+Parking facility -</strong>
+__</p>
+
+
+</cure>
+<br>
+<footer>
+<p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more. </p>
+</footer>
