--- a/Activities/Gallery.html
+++ b/Activities/Gallery.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Public Holidays | GSSSBangana</title>
+    <title>Gallery | GSSSBangana</title>
     <link href="main.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -101,3 +102,49 @@
 </nav>
 
 <br>
+<header> <h2 align="center"> Photos from archives (Memories of special events!) <h2> </header>
+<h1> Gallery:- </h1>
+
+<h2 align="center">
+<div class="gallery">
+SESSION 2022-2023
+</h2>
+<div id="container">
+<div>
+<img src="file.png"  width="250px">
+<p>
+<p>Date: --/--/---- </p>
+<p>Event: ________ </p>
+</div>
+<div>
+<img src="file.png" width="250px">
+<p>Date: --/--/---- </p>
+<p>Event: ________ </p>
+</div>
+<div>
+<img src="file.png" width="250px">
+<p>Date: --/--/---- </p>
+<p>Event: ________ </p>
+</div>
+<div>
+<img src="file.png" width="250px">
+<p>Date: --/--/---- </p>
+<p>Event: ________ </p>
+</div>
+<div>
+<img src="file.png" width="250px">
+<p>Date: --/--/---- </p>
+<p>Event: ________- </p>
+</div>
+</div>
+
+
+</cure>
+
+
+<br>
+
+<footer>
+<p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more.</p>
+</footer>
+
