--- a/Activities/Get_Homework.html
+++ b/Activities/Get_Homework.html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -101,3 +102,79 @@
 </nav>
 
 <br>
+<header> <h2 align="center"> Get Vacation Homework of various subjects <h2> </header>
+<h1> Homework:- </h1>
+<div class="gallery">
+<h2 align="center"> Winter Vacation Homework </h2>
+</div>
+<br>
+<table >
+<thead>
+<th colspan="2"><h2> Standard 6th (<a href="homework.pdf">Get pdf</a>) </h2></th>
+</thead>
+<thead>
+<th colspan="1"><h3>Subject Name </h3></th>
+<th colspan="1"><h3>Homework </h3></th>
+</thead>
+<tr>
+<td>
+English
+</td>
+<td>
+<li> Read all the chapters thoroughly. </li>
+<li> Write essay on ___________. </li>
+<li> Write an informal letter to your friend. </li>
+<li> Write and learn synonyms of 10 words everyday. </li>
+<li> write a diary entry everyday. </li>
+</td>
+</tr>
+<tr>
+<td>
+Hindi
+</td>
+<td>
+<li> सभी अध्यायों को अच्छी तरह से पढ़ें।</li>
+<li> ______ पर निबंध लिखें। </li>
+<li>अपने मित्र को एक अनौपचारिक पत्र लिखें।</li>
+<li> हर रोज एक डायरी प्रविष्टि लिखें। </li>
+</td>
+</tr>
+<tr>
+<td>
+Maths
+</td>
+<td>
+<li> Practice exercises of all the chapters thoroughly. </li>
+<li> Learn tables from 10 to 20. </li>
+<li> Learn Roman alphabets till 1000 </li>
+
+</td>
+</tr>
+<tr>
+<td>
+Science
+</td>
+<td>
+<li> Study all chapters thoroughly.</li>
+<li> Do any kind of 5 science activties and write about them. </li>
+
+</td>
+</tr>
+<tr>
+<td>
+Social Science
+</td>
+<td>
+<li> Study all chapters thoroughly.</li>
+<li> Stargaze at night with a guardian and note down the planets you found with time and direction. </li>
+
+</td>
+</tr>
+</table>
+</cure>
+<br>
+
+<footer>
+<p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more. </a>
+</footer>
+
