--- a/Activities/Vacation_Schedule.html
+++ b/Activities/Vacation_Schedule.html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -101,3 +102,107 @@
 </nav>
 
 <br>
+
+<br>
+<header> <h2 align="center"> Holidays And Vacation Schedule <h2> </header>
+<h1> Holidays:- </h1>
+<div class="gallery">
+<h2 align="center"> Holidays Schedule for session 2022-23 </h2>
+</div>
+<br>
+<div id="container">
+<div>
+<table>
+<thead>
+<th colspan="2"><h2> Public Holidays (<a href="homework.pdf">Get pdf</a>) </h2></th>
+</thead>
+<thead>
+<th colspan="1"><h3>Date </h3></th>
+<th colspan="1"><h3>Occasion </h3></th>
+</thead>
+<tr>
+<td>
+15/04/2023
+</td>
+<td>
+Himachal Day
+</td>
+</tr>
+<tr>
+<td>
+15/08/2023
+</td>
+<td>
+Independence Day
+</td>
+</tr>
+<tr>
+<td>
+02/10/2023
+</td>
+<td>
+<p>Birthday of Mahatama Gandhi/</p>
+<p>International non-violence day</p>
+
+</td>
+</tr>
+<tr>
+<td>
+26/01/2023
+</td>
+<td>
+Republic Day
+</td>
+</tr>
+
+
+
+</table>
+</div>
+
+<div>
+<table>
+<thead>
+<th colspan="2"><h2> Vacation Schedule </h2></th>
+</thead>
+<thead>
+<th colspan="1"><h3>Break Period</h3></th>
+<th colspan="1"><h3>Season </h3></th>
+<tr>
+<td>
+--/--/2023 to --/--/2023
+</td>
+<td>
+Summer Break
+</td>
+</tr>
+<tr>
+<td>
+--/--/2023 to --/--/2023
+</td>
+<td>
+Autumn Break
+</td>
+</tr>
+<tr>
+<td>
+--/--/2023 to --/--/2023
+</td>
+<td>
+Winter Break
+</td>
+</tr>
+
+</thead>
+</table>
+</div>
+</div>
+</cure>
+
+<br>
+
+
+
+<footer>
+<p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more. </a>
+</footer>
