--- a/Administration.html
+++ b/Administration.html
@@ -164,7 +164,7 @@ Principal
 <img src="images/man.png" width="50px">
 </td>
 <td>
-Sh. 
+Sh. Narinder Kumar
 </td>
 <td>
 PGT (Accounts)
@@ -192,7 +192,7 @@ PGT (Biology)
 <img src="images/man.png" width="50px">
 </td>
 <td>
-Sh. 
+Sh. Jitender Kumar
 </td>
 <td>
 PGT (Business Studies)
@@ -276,7 +276,7 @@ PGT (Economics)
 <img src="images/man.png" width="50px">
 </td>
 <td>
-Sh. 
+Sh. Vinod Kumar
 </td>
 <td>
 PGT (English)
