--- a/Features/Syllabus.html
+++ b/Features/Syllabus.html
@@ -188,4 +188,5 @@
 <br>
 <footer>
 <p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more. </a>
+</footer>
 
